--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "stripe": "^14.19.0"
   }
 }
